[package]
name = "blog_api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
chrono = "0.4"